kopia strony z-index fix

--- a/Laby2/main.css
+++ b/Laby2/main.css
@@ -137,6 +137,7 @@ a:link, a:visited {
     height: 100%;
     top: 0px;
     left: 0px;
+    z-index: 2;
 }
 
 .grid_container {
